# bga-backend

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: lint_and_test_actions.yml  linters.yml  pytest.yml
db/init/: 02_create_users.sql  03_set_user_passwords.sh  04_create_tables.sql
docker/: compose.yaml  pipeline.Dockerfile  web.Dockerfile
pipeline/: config.py  extract.py  load.py  run.py  run_job.py  transform_xml.py
pipeline_job/: extract.py  load.py  run.py  transform_xml.py
pipeline_job/bgg_api/: extract.py  transform_xml.py
services/common/: config.py
services/db/init/: 01_create_database.sql  04_create_tables.sql
services/pipeline/: extract.py  load.py  run_job.py
services/web/: main.py
services/web/db/: session.py
services/web/routers/: games.py
src/app/: config.py  main.py
src/app/db/: db_session.py  models.py
src/db/init/: 01_create_database.sql  04_create_tables.sql
src/pipeline/: bggxmlapi2.py  extract.py  load.py  run_job.py  transform_xml.py
src/web/: main.py
src/web/routers/: games.py
tests/: conftest.py
tests/test_app/: test_db_session.py
tests/test_pipeline/: test_bggxmlapi2.py  test_extract.py  test_load.py  test_transform_xml.py
tests/test_web/: test_db_session.py  test_main.http
