[tool.poetry]
name = "bga_backend"
version = "0.1.0"
description = ""
authors = ["Randy Nance <randynobx@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.40"

[tool.poetry.group.backend]
optional = true

[tool.poetry.group.backend.dependencies]
fastapi = "^0.115.12"
uvicorn = "^0.34.0"

[tool.poetry.group.pipeline]
optional = true

[tool.poetry.group.pipeline.dependencies]
requests = "^2.32.3"
types-requests = "*"
pandas = "^2.2.3"
pandas-stubs = "*"
python-dotenv = "*"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "*"
flake8 = "*"
black = "*"
mypy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
